--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "slider",
-  "version": "0.1.0",
-  "private": true,
+  "name": "reactjs_structure",
+  "version": "0.2.0",
+  "description": "A personal structure for your react js projects that you can use in your projects if you wish",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
+    "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-select": "^4.3.0",
+    "react-toastify": "^7.0.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.15.5",
+    "swiper": "^6.5.9",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +35,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -34,5 +48,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "keywords": [
+    "reactjs_structure",
+    "react_structure",
+    "structure",
+    "structure_react",
+    "structure_reactjs",
+    "reactjs"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hamzehazizzadeh/reactjs_structure.git"
+  },
+  "author": "Hamzeh Azizzadeh",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hamzehazizzadeh/reactjs_structure/issues"
   }
 }
